--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.38.4"></script>
     <script src="supabase.js"></script>
 
-    <script type="module" src="https://sclass0614.github.io/authCheck/authCheck.js"></script>
+    <!-- <script type="module" src="https://sclass0614.github.io/authCheck/authCheck.js"></script> -->
 
     <style>
       * {
